--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://meesj.github.io/test.html">
+<meta http-equiv="refresh" content="0; url=https://meesj.github.io/personal-website/test.html">
